# QuantApp

./: LICENSE  README.md  __main__.py  pyproject.toml
backend/: BacktestTrader.py  DataPreprocessor.py  EnsembleEvaluation.py  GroupPreprocessor.py  IndicatorsCalculator.py  ModelEvaluation.py  ModelPreparation.py  OnlineCrawling.py  PortfolioAllocation.py  PortfolioStrategy.py  SelectTopFeatures.py  StatsEvaluator.py  StockDownloader.py  StockPicker.py  TradingAnalyzer.py  TradingSystem.py  TransfomeHandler.py
frontend/: AppTile.py  BacktestPage.py  DataPage.py  FileExecution.py  MainPage.py  ModelPage.py  OutputRedirector.py  PortfolioPage.py  QuantApp.py
